# kale

./: .gitignore  .license-header.txt  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTE.md  CONTRIBUTING.md  FAQ.md  Makefile  OWNERS  README.md  RELEASE.md  cliff.toml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_BACKEND.md  BUG_FRONTEND.md  BUG_REPORT.md  CHORE.md  FEATURE_REQUEST.md  config.yml
.github/workflows/: build_backend.yml  build_labextension.yml  docs.yaml  e2e-test.yml  license-check.yml  release.yml
backend/: MANIFEST.in  pyproject.toml  setup.py
backend/kale/: __init__.py  cli.py  compiler.py  pipeline.py  step.py
backend/kale/common/: __init__.py  astutils.py  flakeutils.py  graphutils.py  jputils.py  k8sutils.py  katibutils.py  kfputils.py  kfutils.py  logutils.py  podutils.py  runutils.py  serveutils.py  utils.py  workflowutils.py
backend/kale/config/: __init__.py  config.py  validators.py
backend/kale/kfserving/: __init__.py  __main__.py  transformer.py
backend/kale/marshal/: __init__.py  backend.py  backends.py  decorator.py
backend/kale/processors/: __init__.py  baseprocessor.py  nbprocessor.py  pyprocessor.py
backend/kale/rpc/: errors.py  katib.py  kfp.py  log.py  nb.py  run.py  utils.py
backend/kale/sdk/: __init__.py  api.py
backend/kale/templates/: nb_function_template.jinja2  new_nb_function_template.jinja2  new_pipeline_template.jinja2
backend/kale/tests/assets/kfp_dsl/: iris.py  pipeline_parameters_and_metrics.py  titanic.py
backend/kale/tests/assets/sdk/: pipeline_parameters.py  simple_data_passing.py
backend/kale/tests/e2e/: test_e2e.py
backend/kale/tests/unit_tests/: conftest.py  test_ast.py  test_config.py  test_dependencies.py  test_graphutils.py  test_jputils.py  test_katibutils.py  test_kfputils.py  test_parser.py  test_podutils.py  test_rpc_nb.py  test_utils.py
docker/: Dockerfile
docker/jupyterlab/: Dockerfile  Dockerfile.dev  Dockerfile.rok  Dockerfile.rok.dev  bashrc
docker/katib/: Dockerfile  Dockerfile.dev
docs/source/: conf.py  contributing.md  index.md  roadmap.md  why-kale.md
docs/source/_static/: custom.css
docs/source/api/: cli.md  compiler.rst  marshal.rst  pipeline.rst  step.rst
docs/source/architecture/: index.md
docs/source/concepts/: cell-types.md  compilation.md  data-passing.md  index.md
docs/source/getting-started/: installation.md  quickstart.md
docs/source/user-guide/: annotating-notebooks.md  pipeline-parameters.md  running-pipelines.md  troubleshooting.md
examples/dog-breed-classification/: extract_bottleneck_features.py
examples/sdk/: artifact.py  compression-pipeline.py  retry-pipeline.py  skeleton.py
examples/sdk/quantile-regression/: init.py  main.py  postprocess.py  preprocess.py  settings.py  train.py
examples/sdk/quantile-regression/lib/: modelprototype.py  quantile_regression.py
examples/sdk/titanic/: datapreprocessing.py  feature_engineering.py  loaddata.py  logistic_regression.py  main.py  randomforest.py  results.py  svm.py
examples/serving/sklearn/: iris.ipynb
examples/serving/xgboost/: iris.ipynb
examples/taxi-cab-classification/data/taxi-cab-classification/: __init__.py
jupyterlab_kubeflow_kale/: __init__.py  handlers.py
jupyterlab_kubeflow_kale/tests/: __init__.py  conftest.py  test_handlers.py
kale/: __init__.py  cli.py  compiler.py  pipeline.py  step.py
kale/common/: __init__.py  astutils.py  flakeutils.py  graphutils.py  imports.py  jputils.py  k8sutils.py  kfputils.py  logutils.py  podutils.py  runutils.py  serveutils.py  utils.py
kale/config/: config.py
kale/kfserving/: __main__.py
kale/marshal/: backend.py  backends.py  decorator.py
kale/processors/: __init__.py  nbprocessor.py
kale/rpc/: errors.py  katib.py  kfp.py  log.py  nb.py  run.py  utils.py
kale/templates/: nb_function_template.jinja2  pipeline_template.jinja2
kale/tests/assets/kfp_dsl/: iris.py  pipeline_parameters_and_metrics.py  titanic.py
kale/tests/assets/notebooks/: pipeline_parameters_and_metrics.ipynb
kale/tests/e2e/: test_e2e.py
kale/tests/unit_tests/: conftest.py  test_config.py  test_imports.py  test_jputils.py  test_katibutils.py  test_kfputils.py
labextension/: .gitignore  .prettierignore  .prettierrc.js  README.md  babel.config.js  conftest.py  eslint.config.mjs  install.json  jest.config.js  package.json  pyproject.toml  setup.py
labextension/.husky/: pre-commit
labextension/jupyter-config/server-config/: jupyterlab_kubeflow_kale.json
labextension/kubeflow_kale_labextension/: __init__.py  handlers.py
labextension/kubeflow_kale_labextension/tests/: __init__.py  test_handlers.py
labextension/schema/: kale-settings.json
labextension/src/: Theme.ts  index.ts  svg.d.ts  widget.tsx
labextension/src/__tests__/: kubeflow-kale-labextension.spec.ts
labextension/src/commands/: kaleToolbar.ts
labextension/src/components/: AdvancedSettings.tsx  AnnotationInput.tsx  DeployButton.tsx  ExperimentInput.tsx  Input.tsx  KFPStatusBadge.tsx  LightTooltip.tsx  Select.tsx  SelectMulti.tsx
labextension/src/icons/: BrowseInRokBlue.tsx  statusRunning.tsx  statusTerminated.tsx
labextension/src/lib/: CellMetadataContext.ts  CellUtils.ts  ColorUtils.ts  Commands.ts  NotebookUtils.tsx  RPCUtils.tsx  TagsUtils.ts  Utils.ts
labextension/src/widgets/: LeftPanel.tsx
labextension/src/widgets/cell-metadata/: CellMetadataEditor.tsx  CellMetadataEditorDialog.tsx  InlineCellMetadata.tsx  InlineMetadata.tsx
labextension/src/widgets/deploys-progress/: DeployProgress.tsx  DeployUtils.tsx  DeploysProgress.tsx
labextension/style/: index.css  index.js
labextension/ui-tests/: jupyter_server_test_config.py  package.json  playwright.config.js
labextension/ui-tests/tests/: kubeflow-kale-labextension.spec.ts
scripts/: serve-wheel.sh
