[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-jupyter-builder>=0.5"]
build-backend = "hatchling.build"

[project]
name = "kubeflow-kale"
dynamic = ["version"]
description = "Convert JupyterNotebooks to Kubeflow Pipelines deployments"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache License Version 2.0" }
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
  "kfp>=2.0.0",
  "autopep8>=2.0.0",
  "astor>=0.8.1",
  "networkx>=3.0.0",
  "jinja2>=3.0.0",
  "pyflakes>=3.0.0",
  "dill>=0.3.8",
  "IPython>=8.30.0",
  "jupyter-client>=8.6.3",
  "jupyter-core>=5.8.1",
  "nbconvert>=7.16.0",
  "nbformat>=5.10.4",
  "ipykernel>=6.29.5",
  "notebook>=7.4.4",
  "packaging>=25.0",
  "progress>=1.5",
  "kubernetes>=30.0.0",
]

authors = [
  { name = "Stefano Fioravanzo", email = "stefano.fioravanzo@gmail.com" }
]

[project.scripts]
kale = "kale.cli:main"
kale_server = "kale.cli:server"
kale-volumes = "kale.cli:kale_volumes"

[project.urls]
Homepage = "https://github.com/kubeflow/kale"

[project.optional-dependencies]
jupyter = [
    "jupyter_server>=2.4.0,<3",
]
dev = [
  "pre-commit",
  "pytest",
  "pytest-clarity",
  "testfixtures",
  "pytest-cov",
  "ruff",
  "coverage",
  "pytest-asyncio",
  "pytest-jupyter[server]>=0.6.0",
]

[tool.hatch.version]
path = "kale/__init__.py"

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlab_kubeflow_kale/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel]
packages = ["kale", "jupyterlab_kubeflow_kale"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_kubeflow_kale/labextension" = "share/jupyter/labextensions/jupyterlab-kubeflow-kale"
"labextension/jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
optional-editable-build = "true"
ensured-targets = [
    "jupyterlab_kubeflow_kale/labextension/static/style.js",
    "jupyterlab_kubeflow_kale/labextension/package.json",
]
skip-if-exists = ["jupyterlab_kubeflow_kale/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]
source_dir = "labextension"
build_dir = "jupyterlab_kubeflow_kale/labextension"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["kale"]
extend-exclude = [
  ".venv",
  "venv",
  "build",
  "dist",
  "__pycache__",
  "kale/tests/assets",
]

[tool.ruff.lint]
select = [
  "F",   # pyflakes
  "E",   # pycodestyle
  "W",   # warnings
  "I",   # isort (imports order)
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]
ignore = [
  "B006",  # mutable-argument-default
  "B027",  # empty method in abstract class (intentional hook methods)
  "B904",  # raise-without-from-inside-except (too noisy for existing code)
  "E402",  # module level import not at top (intentional for logging setup)
  "E501",  # line length handled by formatter
  "E721",  # type comparison with == (existing patterns)
  "F403",  # star imports (used in marshal backends)
  "N801",  # class name not CapWords (internal helper classes)
  "N812",  # lowercase imported as uppercase (KALE_VERSION pattern)
  "N815",  # mixedCase variable (labextension API compatibility)
  "N818",  # exception name should end with Error (existing naming convention)
  "SIM115",  # context manager for open (fine for simple read patterns)
  "UP031",  # percent format (existing code style)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint.isort]
known-first-party = ["kale"]
combine-as-imports = true
force-sort-within-sections = true
